[gd_scene load_steps=8 format=2]

[ext_resource path="res://smooth_terrain/main.gd" type="Script" id=1]
[ext_resource path="res://smooth_terrain/transvoxel_terrain_material.tres" type="Material" id=2]
[ext_resource path="res://common/spectator_avatar.tscn" type="PackedScene" id=3]
[ext_resource path="res://smooth_terrain/interaction.gd" type="Script" id=6]
[ext_resource path="res://smooth_terrain/voxel_generator_noise_2d_smooth.tres" type="VoxelGeneratorNoise2D" id=7]

[sub_resource type="Environment" id=1]
background_mode = 2
background_color = Color( 1, 1, 1, 1 )
ambient_light_sky_contribution = 0.5
ambient_light_energy = 0.1
fog_enabled = true

[sub_resource type="VoxelMesherTransvoxel" id=2]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
script = null

[node name="DirectionalLight" type="Node" parent="."]
script = null

[node name="SpectatorAvatar" parent="." instance=ExtResource( 3 )]
speed = 100.0

[node name="VoxelViewer" parent="SpectatorAvatar" index="1"]
script = null

[node name="OmniLight" type="Node" parent="SpectatorAvatar"]
script = null

[node name="Interaction" type="Node" parent="SpectatorAvatar"]
script = ExtResource( 6 )

[node name="VoxelTerrain" type="VoxelLodTerrain" parent="."]
generator = ExtResource( 7 )
mesher = SubResource( 2 )
view_distance = 1024
lod_count = 6
material = ExtResource( 2 )
generate_collisions = false
collision_lod_count = 1
script = null

[editable path="SpectatorAvatar"]
